# fstak

./: .gitignore  AGENTS.md  CLAUDE.md  README.md
.github/workflows/: release.yml
backend/: README.md  deploy.sh  main.py  pyproject.toml
backend/control_plane/: __init__.py  app.py  auth.py  auth_manager.py  caddy.py  config.py  models.py  spx_auth_client.py  storage.py  store.py
backend/infra/: configure-caddy.sh  deploy-remote.sh  fstak-control.service  fstak-load-secrets.service  load-secrets.sh
backend/tests/: test_github_auth.py  test_story5_run_contract.py
fstak/: Cargo.toml  fstak.config.json
fstak/src/: cli.rs  config.rs  credentials.rs  main.rs  ui.rs
fstak/src/commands/: add.rs  api.rs  env.rs  feedback.rs  kill.rs  login.rs  logout.rs  logs.rs  mod.rs  new.rs  ps.rs  run.rs  whoami.rs
fstak/tests/: run_cli.rs
infra/: deploy.sh
notes/stories/: fstak-mvp-stories.md  story-status-dashboard.html
notes/stories/fstak-mvp/: 04-scaffold-command-react-bun-template.md
scripts/: watch-opencode-dashboard.sh
