[project]
name = "fstak-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "httpx>=0.27",
  "uvicorn[standard]>=0.30",
  "python-multipart>=0.0.9",
  "pydantic>=2.8",
]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "basic"
include = ["control_plane", "main.py"]
