[package]
name = "fstak"
version = "0.2.0"
edition = "2024"
description = "Deploy React SPAs to the fstak production runtime. Deployments are remote static sites with stable project URLs; closing the local CLI does not stop the deployment."

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
colored = "3"
petname = "2"
tar = "0.4"
flate2 = "1"
ureq = { version = "2", features = ["json"] }
dirs = "6"
open = "5"

[dev-dependencies]
tempfile = "3"
